--- a/tabs/moby28462_minipage.tex
+++ b/tabs/moby28462_minipage.tex
@@ -2,7 +2,7 @@
 \begin{minipage}{.35\textwidth}
 \begin{minted}
 [
-fontsize=\scriptsize,
+fontsize=\footnotesize,
 linenos=true,
 escapeinside=||,
 breaklines
@@ -49,7 +49,7 @@ func StatusChange(cnt *Container){
 }
 \end{minted}
 \end{minipage}
-\begin{minipage}{.29\textwidth}
+\begin{minipage}{.25\textwidth}
   \centering
   \includegraphics[width=.99\linewidth]{figs/execViz_moby.pdf}
 \end{minipage}
