--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -50,9 +50,8 @@
 \begin{document}
 
 
-\title{GOAT
-\thanks{NSF funding?}
-}
+\title{Automated Dynamic Concurrency Analysis for Go}
+
 
 \author{\IEEEauthorblockN{Saeed Taheri}
 \IEEEauthorblockA{\textit{School of Computing} \\
