--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -76,12 +76,41 @@ ganesh@cs.utah.edu}
 golang, concurrency, testing coverage analysis
 \end{IEEEkeywords}
 
+\section*{GANESH PART}
+
+\section{GIntroduction}
+\label{sec:Gintro}
+\input{Gintro.tex}
+
+\section{Background}
+\label{sec:Gbg}
+\input{Gbackground.tex}
+
+\section{GOAT: Debugging}
+\label{sec:Gdesign}
+\input{Gdesign.tex}
+
+
+\section{GOAT: Coverage}
+\label{sec:Gcoverage}
+\input{Gcoverage.tex}
+
+\section{Related Work}
+\label{sec:Grelated}
+\input{Grelatedwork.tex}
+
+
+
+
+%-----------------------------------------------------------------
+\clearpage
+%-----------------------------------------------------------------
+
+\section*{SAEED PART}
+
 \section{Introduction}
 \label{sec:intro}
 \input{intro.tex}
-
-asdasdasd
-
 
 \section{Background}
 \label{sec:bg}
